--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
 <body>
   <h1>Express</h1>
   <p>Welcome to Express</p>
+  <a href="https://www.google.com/">
+    Google
+  </a>
 </body>
 
 </html>
